--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		</nav>
 
 		<section id="content">
-			<h2>THEME TITLE HERE</h2>
-
+			<!-- <h2>THEME TITLE HERE</h2> -->
+			<h2>Harry Potter</h2>
 			<div id="content-list">
 				<!-- sammple of what your toString should output
 					<div id="content-0">
